# jotter

./: .gitignore  .prettierignore  AGENTS.md  README.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
.claude/skills/release/: SKILL.md
.claude/skills/release-jotter/: SKILL.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml  tap.yml
docs/: plan-v0.2.md
scripts/: release.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: meta.js  sync-reconcile.js  sync-reconcile.test.js  sync-ui.js  sync-ui.test.js  text.js  text.test.js
