[package]
name = "mac-notepad"
version = "0.2.0"
description = "A fast, minimal notepad with an autosaved drafts store"
authors = ["Byurhan Nurula"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/byurhannurula/jotter"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name (an issue on Windows: rust-lang/cargo#8519).
name = "mac_notepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
