[package]
name = "jotter"
version = "0.3.1"
description = "A fast, minimal notepad with an autosaved drafts store"
authors = ["Byurhan Nurula"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/byurhannurula/jotter"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name (an issue on Windows: rust-lang/cargo#8519).
name = "jotter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native HTTP client for cloud-sync (talks to the self-hosted Worker). rustls-tls
# avoids OpenSSL build friction across macOS/Windows/Linux. reqwest's async client
# runs on Tauri v2's built-in tokio runtime, so no direct tokio dep is needed.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
# Integration tests drive sync_core against a mock HTTP server on a tempdir.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
